# smarter

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile_bash  Makefile_ps  README.md  docker-compose.yml  mypy.ini  pyproject.toml  release.config.js
.github/: dependabot.yml
.github/actions/deploy/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  deploy.yml  pushMain.yml
changelogs/: CHANGELOG-v0.10.md  CHANGELOG-v0.11.md  CHANGELOG-v0.12.md  CHANGELOG-v0.13.md  CHANGELOG-v0.14.md  CHANGELOG.md
docs/json/: reactapp.config.json
docs/legacy/: CHATBOT_API.md  CLI.md  OPENAI_JSON_EXAMPLES.md
docs/source/: conf.py  contributors.rst  index.rst  smarter-framework.rst  smarter-platform.rst  smarter-resources.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html
docs/source/adr/: 020-semantic-versioning.rst
docs/source/example-manifests/: account.yaml  auth-token.yaml  chat-history.yaml  chat-plugin-usage.yaml  chat-tool-call.yaml  llm_client.yaml
docs/source/smarter-framework/: developer-reference.rst  guides.rst  smarter-api.rst  smarter-broker-model.rst  smarter-cli.rst  smarter-manifests.rst  technologies.rst  vs-code-extension.rst
docs/source/smarter-platform/: adding-an-llm-provider.rst  api-keys.rst  cli.rst  configuration.rst  cost-accounting.rst  installation.rst  security-faq.rst  security.rst  smarter-web-console.rst  (+1 more)
scripts/: activate.sh  artifacthub-cosign-verify.sh  artifacthub-verification.sh  bump_version.py  env.sh  google-service-account.sh  run_pylint.sh
setup/macos/: .zshrc.example  README.md  setup.sh
setup/ubuntu/: .zshrc.example  README.md  setup.sh
setup/windows/: README.md  setup.ps1
smarter/: .coveragerc  manage.py
smarter/react/: README.md  package-lock.json  package.json
smarter/requirements/: base.txt  docker.txt  docs.txt  local.txt
smarter/smarter/: __init__.py  __version__.py  asgi.py  consumers.py  hosts.py  wsgi.py
(+1323 files in other folders)
